--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-openai==0.27.0
-python-telegram-bot==20.1
-apscheduler==3.8.1
-python-dotenv==0.20.0
+pyTelegramBotAPI==4.12.0
+openai==1.30.1
+python-dotenv==0.21.1  # Optional, if you're using .env for environment variables
